--- a/ConsumoVeiculo/ConsumoVeiculo.csproj
+++ b/ConsumoVeiculo/ConsumoVeiculo.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>f5834b3a-fccf-4ed9-978b-0ceda4ed3140</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
